added default image in main page

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,42 +1,46 @@
-<% @posts.each do |f| %>
-  <div class="demo-card-wide mdl-card mdl-shadow--2dp my-card">
-    <div class="mdl-card__supporting-text">
-      <strong><div><%= f.title %></div></strong>
-      <div><%= f.content %></div>
-    </div>
-    <div class="mdl-card__actions mdl-card--border">
-      <ul class="demo-list-three mdl-list no-margin no-padding">
-        <% f.comments.each do |c| %>
-          <li class="mdl-list__item">
-            <span class="mdl-list__item-primary-content">
-              <span class="mdl-list__item-text-body">
-                <%= c.id%>) <%= c.content %>
+<% if @posts.size == 0 %>
+  <img src='/prism.png' alt="띠용 이미지가 어디갔지" class="image-center">
+<% else %>
+  <% @posts.each do |f| %>
+    <div class="demo-card-wide mdl-card mdl-shadow--2dp my-card">
+      <div class="mdl-card__supporting-text">
+        <strong><div><%= f.title %></div></strong>
+        <div><%= f.content %></div>
+      </div>
+      <div class="mdl-card__actions mdl-card--border">
+        <ul class="demo-list-three mdl-list no-margin no-padding">
+          <% f.comments.each do |c| %>
+            <li class="mdl-list__item">
+              <span class="mdl-list__item-primary-content">
+                <span class="mdl-list__item-text-body">
+                  <%= c.id%>) <%= c.content %>
+                </span>
               </span>
-            </span>
-              <span class="mdl-list__item-secondary-content">
-                <a data-confirm="진짜 삭제해?!" data-method="DELETE" class="mdl-list__item-secondary-action" href="/posts/<%= f.id %>/comments/<%= c.id %>"><i class="material-icons">delete</i></a>
-              </span>
-          </li>
-        <% end %>
-      </ul>
-      <div class="mdl-grid--no-spacing">
-        <form action='/posts/<%=f.id%>/comments' method='POST'>
-          <div class="mdl-textfield mdl-js-textfield mdl-cell--9-col">
-            <input class="mdl-textfield__input" type="text" id="sample1" name="content">
-            <label class="mdl-textfield__label" for="sample1">댓글 작성하기</label>
+                <span class="mdl-list__item-secondary-content">
+                  <a data-confirm="진짜 삭제해?!" data-method="DELETE" class="mdl-list__item-secondary-action" href="/posts/<%= f.id %>/comments/<%= c.id %>"><i class="material-icons">delete</i></a>
+                </span>
+            </li>
+          <% end %>
+        </ul>
+        <div class="mdl-grid--no-spacing">
+          <form action='/posts/<%=f.id%>/comments' method='POST'>
+            <div class="mdl-textfield mdl-js-textfield mdl-cell--9-col">
+              <input class="mdl-textfield__input" type="text" id="sample1" name="content">
+              <label class="mdl-textfield__label" for="sample1">댓글 작성하기</label>
+            </div>
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+              등록
+            </button>
           </div>
-          <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-            등록
-          </button>
-        </div>
-      </form>
+        </form>
+      </div>
+      <div class="mdl-card__menu">
+          <a data-confirm="진짜 삭제해?!" data-method="DELETE" href="/posts/<%= f.id %>" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+            <i class="material-icons">delete</i>
+          </a>
+      </div>
     </div>
-    <div class="mdl-card__menu">
-        <a data-confirm="진짜 삭제해?!" data-method="DELETE" href="/posts/<%= f.id %>" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-          <i class="material-icons">delete</i>
-        </a>
-    </div>
-  </div>
+  <% end %>
 <% end %>
 
 <a href="/posts/new" class="create-post mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
