--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,6 +29,11 @@ textarea {
     background-color: white;
     margin-top: 10px;
 }
+.image-center {
+    display: block;
+    margin: auto;
+    width: 40%;
+}
 .full-width {
   width: 100%;
 }
