--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -83,3 +83,12 @@ textarea {
     background-color: white;
     margin-top: 10px;
 }
+.mdl-textfield textarea.mdl-textfield__input{
+    overflow: hidden;
+    border: none;
+    resize: none;
+    display: inline-block;
+}
+.comment-label {
+    font-size: 12px;
+}
