--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
           <!-- Title -->
-          <span class="mdl-layout-title"><a href='/' style="text-decoration:none; color: white;">서비스명을 정해보아요</a></span>
+          <span class="mdl-layout-title"><a href='/' style="text-decoration:none; color: white;">Snulion Manito!</a></span>
           <!-- Add spacer, to align navigation to the right -->
           <div class="mdl-layout-spacer"></div>
           <!-- Navigation. We hide it in small screens. -->
