--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Change your password", edit_user_registration_path %>
+
 <% if @posts.size == 0 %>
   <img src='/prism.png' alt="띠용 이미지가 어디갔지" class="image-center">
 <% else %>
