--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <%= link_to "Change your password", edit_user_registration_path %>
 
 <% if @posts.size == 0 %>
-  <img src='/prism.png' alt="띠용 이미지가 어디갔지" class="image-center">
+  <%= image_tag 'logo.png', class: "image-center" %>
 <% else %>
   <% @posts.each_with_index do |f, i| %>
     <div class="demo-card-wide mdl-card mdl-shadow--2dp my-card">
