--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -61,4 +61,41 @@
         },0);
       });
     }
+
+    $(document).ready(function(){
+    $(".ajax-delete").on("click", function(e) {
+      const comment_id = $(this).data("comment_id")
+      e.preventDefault()  //클릭 event 외에 별도의 브라우저 행동을 block (ex: page 이동)
+      e.stopPropagation()  //부모 tag들에 event 전파(bubble up)를 block  
+      $.ajax({
+        type: "DELETE",
+        dataType: "JSON",
+        url: "/comments/" + comment_id,
+        data: {},
+        success: function(data) {
+          if ($(".comment" + comment_id).hasClass("newest-comment")) {
+            $(".comment" + comment_id).next("li").addClass("newest-comment")
+            $(".comment" + comment_id).next("li").show()
+          }
+          $(".comment" + comment_id).remove()
+          return;
+        }
+      })
+    })
+    $("form").submit(function(event){
+      const feed_id = $(this).data("feed_id")
+      $.ajax({
+        url: "/feeds/" + feed_id + "/comments",
+        type: "POST",
+        data: {
+          feed_id: feed_id,
+          content: $(".input"+feed_id).val()
+        },
+        dataType: "JSON",
+        success: function(data) {
+          console.log("success")
+          return
+        }
+      })
+    })
 </script>
