--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,8 +1,8 @@
 <div class="new-post">
-  <h1>새로운 서비스명 제안</h1>
+  <h1>새로운 힌트/미션 수행</h1>
   <form action='/posts' method='POST'>
-    <p>서비스명:</p><input type='text' name='title' class="new-title"/><br><br>
-    <p>설명:</p><textarea rows = "12" cols="100" name="content"></textarea><br><br>
-    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">제안</button>
+    <p>제목:</p><input type='text' name='title' class="new-title"/><br><br>
+    <p>내용:</p><textarea rows = "12" cols="100" name="content"></textarea><br><br>
+    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">제출</button>
   </form>
 </div>
