--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,19 @@
           <!-- Add spacer, to align navigation to the right -->
           <div class="mdl-layout-spacer"></div>
           <!-- Navigation. We hide it in small screens. -->
+          <% if user_signed_in? %>
+            <nav class="mdl-navigation">
+              <button id="demo-menu-lower-right" class="mdl-button mdl-js-button mdl-button--icon">
+                <a href="/users/edit" style="text-decoration: none; color: white;"><i class="material-icons">account_circle</i></a>
+              </button>
+              <a href="/users/edit" style="margin-left: 10px; text-decoration: none; color: white;"><%= current_user.username %></a>&nbsp;님
+              <a href="users/sign_out" data-method="delete" style="margin-left: 10px; text-decoration: none; color: white;">로그아웃</a>
+            </nav>
+          <% else %>
+            <nav class="mdl-navigation mdl-layout--large-screen-only">
+              <a class="mdl-navigation__link" href="/users/sign_in">로그인</a>
+            </nav>
+          <% end %>
         </div>
       </header>
 
