--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,36 +17,7 @@
 
   <body class="mdl-color--grey-200">
     <div class="mdl-layout__container">
-    <!-- Always shows a header, even in smaller screens. -->
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-          <!-- Title -->
-          <span class="mdl-layout-title"><a href='/' style="text-decoration:none; color: white;">Snulion Manito</a></span>
-          <!-- Add spacer, to align navigation to the right -->
-          <div class="mdl-layout-spacer"></div>
-          <!-- Navigation. We hide it in small screens. -->
-          <% if user_signed_in? %>
-            <nav class="mdl-navigation">
-              <button id="demo-menu-lower-right" class="mdl-button mdl-js-button mdl-button--icon">
-                <a href="/users/edit" style="text-decoration: none; color: white;"><i class="material-icons">account_circle</i></a>
-              </button>
-              <a href="/users/edit" style="margin-left: 10px; text-decoration: none; color: white;"><%= current_user.username %></a>&nbsp;님
-              <a href="users/sign_out" data-method="delete" style="margin-left: 10px; text-decoration: none; color: white;">로그아웃</a>
-            </nav>
-          <% else %>
-            <nav class="mdl-navigation mdl-layout--large-screen-only">
-              <a class="mdl-navigation__link" href="/users/sign_in">로그인</a>
-            </nav>
-          <% end %>
-        </div>
-      </header>
-
-      <main class="mdl-layout__content">
-        <div class="page-content"><%= yield %></div>
-      </main>
+      <%= yield %>
     </div>
-
-  </div>
   </body>
 </html>
