--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,43 +1,64 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<!-- Always shows a header, even in smaller screens. -->
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+  <header class="mdl-layout__header">
+    <div class="mdl-layout__header-row">
+      <!-- Title -->
+      <span class="mdl-layout-title"><a href='/' style="text-decoration:none; color: white;">Snulion Manito</a></span>
+      <!-- Add spacer, to align navigation to the right -->
+      <div class="mdl-layout-spacer"></div>
+      <!-- Navigation. We hide it in small screens. -->
+      <% if user_signed_in? %>
+        <nav class="mdl-navigation">
+          <button id="demo-menu-lower-right" class="mdl-button mdl-js-button mdl-button--icon">
+            <a href="/users/edit" style="text-decoration: none; color: white;"><i class="material-icons">account_circle</i></a>
+          </button>
+          <a href="/users/edit" style="margin-left: 10px; text-decoration: none; color: white;"><%= current_user.username %></a>&nbsp;님
+          <a href="users/sign_out" data-method="delete" style="margin-left: 10px; text-decoration: none; color: white;">로그아웃</a>
+        </nav>
+      <% else %>
+        <nav class="mdl-navigation mdl-layout--large-screen-only">
+          <a class="mdl-navigation__link" href="/users/sign_in">로그인</a>
+        </nav>
+      <% end %>
+    </div>
+  </header>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <div class="edit">
+    <h4 style="font-weight: bold;">내 정보 수정하기</h4>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <div class="error-message">
+        <%= render "devise/shared/error_messages", resource: resource %>
+      </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+      <div class="mdl-textfield mdl-js-textfield">
+        <%= f.label :"이메일" %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "mdl-textfield__input", id: "sample1" %>
+        <label class="mdl-textfield__label" for="sample1"></label>
+      </div><br>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <div class="mdl-textfield mdl-js-textfield">
+        <%= f.label :"현재 비밀번호" %><br />
+        <%= f.password_field :current_password, autocomplete: "current-password", class: "mdl-textfield__input", id: "sample2" %>
+        <label class="mdl-textfield__label" for="sample2"></label>
+      </div><br>
+
+      <div class="mdl-textfield mdl-js-textfield">
+        <%= f.label :"새 비밀번호" %>
+        <% if @minimum_password_length %>
+          <em>(최소 <%= @minimum_password_length %>글자)</em>
+        <% end %><br>
+        <%= f.password_field :password, class: "mdl-textfield__input" %>
+        <label class="mdl-textfield__label"></label>
+      </div><br>
+
+      <div class="mdl-textfield mdl-js-textfield">
+        <%= f.label :"새 비밀번호 확인" %><br />
+        <%= f.password_field :password_confirmation, class: "mdl-textfield__input" %>
+        <label class="mdl-textfield__label"></label>
+      </div><br>
+
+      <%= f.submit "제출", class: "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" %>
     <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
