--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,12 @@
 
  * { font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif'; }
  
+h3 {
+    font-size: 20px;
+    padding: 0px;
+    margin-left: 20px;
+}
+
 .error-message {
     #error_explanation {
         h2 {
