--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -62,7 +62,7 @@
             <input type="checkbox" id="show" class="mdl-checkbox__input" name="show" value="true" >
             <span class="mdl-checkbox__label">마니띠에게 공개하기</span>
         </label><br><br>
-        <%= f.file_field :photo, accept:'image/*' %>
+        <%= f.file_field :photo, accept:'image/*' %><br><br>
         <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">제출</button>
         </form>
         <br><br><br><br>
