--- a/app/views/noti_mailer/noti_email.html.erb
+++ b/app/views/noti_mailer/noti_email.html.erb
@@ -7,7 +7,7 @@
     <p>
         <%= @user.username %>님, 안녕하세요!<br><br>
         마니또로부터 선물이 도착했습니다!!<br>
-        어서 http://gonggongjaewon.com 에 접속해서 선물을 확인해보세요!<br><br>
+        어서 <a href="https://gonggongjaewon.com">https://gonggongjaewon.com</a> 에 접속해서 선물을 확인해보세요!<br><br>
         혹시라도 본 이메일을 받고 접속을 했는데 새로운 게시물이 없다면 아마 마니또가 게시글을 지워서 그런 것일테니 놀라지 마세요~<br>
         그리고 댓글에 대해서는 이메일이 전송되지 않으니, 수시로 확인해서 힌트/미션 관련 댓글을 놓치지 마세요~~<br><br>
 
