--- a/app/views/posts/_faq.html.erb
+++ b/app/views/posts/_faq.html.erb
@@ -3,14 +3,17 @@
     대강 정리해보는 FAQ<br><br>
 
     <ol>
+    <li>힌트는 4개 다 하고 미션은 2주에 2개씩만 하면 되는 건가요?</li>
+    - 네 그렇습니다!<br><br>
+
     <li>마니띠에게 공개하기 버튼을 체크하지 않고 포스팅을 하면 이메일 알림이 안 보내지나요?</li>
-    - 네<br><br>
+    - 네, 공개를 하셔야만 이메일이 보내집니다.<br><br>
 
     <li>그러면 힌트 4가지에 대한 포스팅만 공개하고 나머지 미션은 공개 안해도 되겠네요?</li>
     - 네, 그런데 이를테면 선물을 어디에 숨겨놨는데 그거 찾아가세요~ 할 때 공개를 하면 좋겠죠?<br><br>
 
     <li>보냈어요랑 제출했어요랑 어떻게 다른 거에요?</li>
-    - 보냈어요 = 마니띠가 볼 수 있는 글, 제출했어요 = 저만 볼 수 있는 글 (마니또는 X) 이에요!<br><br>
+    - 보냈어요 = 마니띠가 볼 수 있는 글, 제출했어요 = 저만 볼 수 있는 글 (마니띠는 X) 이에요!<br><br>
 
     <li>엇 그럼 공개안해도 상관없는거에요?</li>
     - 이를테면 마니띠랑 둘이 코딩을 같이 하고 인증샷을 찍었는데 그걸 공개해버리시면 마니띠가 마니또가 누군지 알 수 있게 되잖아요, 그런데 미션 인증을 해야되기는 하니까 그런 경우 저한테만 공개하시는거죠!<br><br>
