--- a/app/views/noti_mailer/noti_email.html.erb
+++ b/app/views/noti_mailer/noti_email.html.erb
@@ -19,7 +19,7 @@
 
         <힌트>
         <ul>
-        <li>마니띠 첫인상 손글씨로 (욕설/바방 X)</li>
+        <li>마니띠 첫인상 손글씨로 (욕설/비방 X)</li>
         <li>마니띠 얼굴 그려서 보내기</li>
         <li>(기존 지인 제외) 동아리원 그 누구도 모르는 나 (마니또)에 대한 신박한 사실 한 가지</li>
         <li>나의 애장품 사진 한 가지 공개하기</li>
