--- a/app/views/posts/_faq.html.erb
+++ b/app/views/posts/_faq.html.erb
@@ -1,6 +1,6 @@
 <div class="edit">
     <br>
-    대강 정리해보는 FAQ<br><br>
+    대강 정리해보는 FAQ (제가 받고 있는 질문들을 수시로 이 곳에 업데이트 하겠습니다! 언제든 편하게 질문 주세요~)<br><br>
 
     <ol>
     <li>힌트는 4개 다 하고 미션은 2주에 2개씩만 하면 되는 건가요?</li>
@@ -20,7 +20,14 @@
 
     <li>이거 이미 비공개로 올려버린 건 공개로 전환할 수 없는거죠? 지우고 새로 써야겠죠?</li>
     - 넹 ㅠㅠ 꼭 지우시지는 않아도 되지만 공개하는 글을 새로 작성하셔야할 것 같아요<br><br>
+    </ol><br><br>
 
-    제가 받고 있는 질문들을 수시로 이 곳에 업데이트 하겠습니다! 언제든 편하게 질문 주세요~
-    </ol>
+    다음과 같은 오류들이 수정되었습니다. 오류가 있을 경우 언제든지 알려주세요!<br><br>
+    <ul>
+    <li>1MB 이상의 사진이 업로드되지 않은 문제 --> 100MB로 변경 (2019.03.18 13:04)</li>
+    <li>힌트 네 개 모두 힌트1로 저장되는 문제 --> 해결 완료 (2019.03.18 13:02)</li>
+    <li>로그안웃 시 에러가 나는 문제 --> 해결 완료 (2019.03.19 02:12)</li>
+    <li>"욕설/바방"이라고 이메일이 전송되는 문제 --> 수정 완료 (2019.03.19 02:12)</li>
+    </ul>
+    <br><br>
 </div>
