--- a/app/views/posts/_faq.html.erb
+++ b/app/views/posts/_faq.html.erb
@@ -20,13 +20,13 @@
 
     <li>이거 이미 비공개로 올려버린 건 공개로 전환할 수 없는거죠? 지우고 새로 써야겠죠?</li>
     - 넹 ㅠㅠ 꼭 지우시지는 않아도 되지만 공개하는 글을 새로 작성하셔야할 것 같아요<br><br>
-    </ol><br><br>
+    </ol><br>
 
     다음과 같은 오류들이 수정되었습니다. 오류가 있을 경우 언제든지 알려주세요!<br><br>
     <ul>
     <li>1MB 이상의 사진이 업로드되지 않은 문제 --> 100MB로 변경 (2019.03.18 13:04)</li>
     <li>힌트 네 개 모두 힌트1로 저장되는 문제 --> 해결 완료 (2019.03.18 13:02)</li>
-    <li>로그안웃 시 에러가 나는 문제 --> 해결 완료 (2019.03.19 02:12)</li>
+    <li>로그아웃 시 에러가 나는 문제 --> 해결 완료 (2019.03.19 02:12)</li>
     <li>"욕설/바방"이라고 이메일이 전송되는 문제 --> 수정 완료 (2019.03.19 02:12)</li>
     </ul>
     <br><br>
