--- a/app/views/posts/_received.html.erb
+++ b/app/views/posts/_received.html.erb
@@ -1,3 +1,6 @@
+<% if current_user.username == "김재원" %>
+  <a class="mdl-navigation__link" href="/posts/admin">어드민만 보세요</a>
+<% end %>
 
 <% if @received_posts.size == 0 %>
   <%= image_tag 'logo.png', class: "image-center" %>
