--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -26,6 +26,8 @@
       <a href="#scroll-tab-2" class="mdl-layout__tab">보냈어요</a>
       <a href="#scroll-tab-3" class="mdl-layout__tab">제출했어요</a>
       <a href="#scroll-tab-4" class="mdl-layout__tab">질문 모음</a>
+      <div class="mdl-layout-spacer"></div>
+      <a href="/users/edit" class="mdl-layout__tab">마니또 맞추기</a>
     </div> 
   </header>
 
