--- a/app/views/posts/guess.html.erb
+++ b/app/views/posts/guess.html.erb
@@ -44,6 +44,7 @@
             <p>맞혔다네 맞혔다네 나는 맞혔다네~</p>
             <p><%= current_user.manito.username %> 마니또!! 자네는 나의 손바닥 안이야~~</p>
         <% else %>
+            <%= image_tag "ddang.jpg" %><br><br>
             <p>두 번의 기회를 모두 사용해 더 이상 도전할 수 없습니다ㅠㅠ</p>
         <% end %>
     </div>
