--- a/app/views/noti_mailer/guess_email.html.erb
+++ b/app/views/noti_mailer/guess_email.html.erb
@@ -5,10 +5,10 @@
   </head>
   <body>
     <p>
-        자네, 마니띠는 자네가 '<%= @guess %>'라고 생각하고 있다네. 맞나?
-        틀렸으면 마음껏 비웃어주게.
-        
-        메일 내용을 쓰기가 귀찮으니 이만 줄이도록 하겠네.
+        자네, 마니띠는 자네가 '<%= @guess %>'라고 생각하고 있다네. 맞나?<br>
+        틀렸으면 마음껏 비웃어주게.<br><br>
+
+        메일 내용을 쓰기가 귀찮으니 이만 줄이도록 하겠네.<br><br>
 
         <a href="https://gonggongjaewon.com">https://gonggongjaewon.com</a>
     </p>
