--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -28,6 +28,7 @@
       <a href="#scroll-tab-4" class="mdl-layout__tab">질문 모음</a>
       <div class="mdl-layout-spacer"></div>
       <a href="/posts/guess" class="mdl-layout__tab">마니또 맞히기</a>
+      <a href="/results" class="mdl-layout__tab">결과 보기</a>
     </div> 
   </header>
 
