edited and added rules

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -27,8 +27,9 @@
       <a href="#scroll-tab-3" class="mdl-layout__tab">제출했어요</a>
       <a href="#scroll-tab-4" class="mdl-layout__tab">질문 모음</a>
       <div class="mdl-layout-spacer"></div>
-      <a href="/results" class="mdl-layout__tab">결과 보기</a>
       <a href="/posts/guess" class="mdl-layout__tab">마니또 맞히기</a>
+      <a href="/results" class="mdl-layout__tab">결과 보기</a>
+      <a href="/" class="mdl-layout__tab">.</a>
     </div> 
   </header>
 
