--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -29,7 +29,9 @@
       <div class="mdl-layout-spacer"></div>
       <a href="/posts/guess" class="mdl-layout__tab">마니또 맞히기</a>
       <a href="/results" class="mdl-layout__tab">결과 보기</a>
-      <a href="/" class="mdl-layout__tab">.</a>
+      <div class="mdl-layout--small-screen-only">
+        <div class="mdl-layout-spacer"></div>
+      </div>
     </div> 
   </header>
 
