--- a/app/views/posts/results.html.erb
+++ b/app/views/posts/results.html.erb
@@ -23,7 +23,10 @@
 </header>
 
 <div class="edit"><br>
-    <!--<%= link_to "메인 페이지로", posts_path, class: "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" %><br><br>-->
+    <div class="mdl-layout--small-screen-only">
+        <%= link_to "메인 페이지로", posts_path, class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored" %><br><br>
+    </div>
+
     <커피/밥 규칙><br>
     <ul>
         <li>힌트 제공 완료 X: <strong>1 커피</strong></li>
