--- a/app/views/posts/results.html.erb
+++ b/app/views/posts/results.html.erb
@@ -23,7 +23,7 @@
 </header>
 
 <div class="edit"><br>
-    <div class="mdl-layout--small-screen-only">
+    <div class="mobile-only">
         <%= link_to "메인 페이지로", posts_path, class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored" %><br><br>
     </div>
 
