--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -186,11 +186,12 @@ textarea {
         font-size: 23px;
     }
 
-    .edit {
-        font-size: 23px;
-    }
+    // .edit {
+    //     font-size: 23px;
+    //     line-height: 1.2;
+    // }
 
-    .mobile-only {
-        display: block;
-    }
+    // .mobile-only {
+    //     display: block;
+    // }
 }
