--- a/app/views/posts/results.html.erb
+++ b/app/views/posts/results.html.erb
@@ -155,7 +155,7 @@
     $(document).ready(function(){
         $( "a.scrollLink" ).click(function( event ) {
             event.preventDefault();
-            $("html, body").animate({ scrollTop: $($(this).attr("href")).offset().top }, 500);
+            $("html, body").animate({ scrollTop: $($(this).attr("href")).offset().top - 130 }, 500);
         });
     });
 </script>
