--- a/app/views/posts/results.html.erb
+++ b/app/views/posts/results.html.erb
@@ -106,6 +106,12 @@
 </div>
 <br><br>
 
+<footer class="my-footer">
+    <div class="footer-text">
+        수고하셨습니다 ^_^
+    </div>
+</footer>
+
 <button id="top-btn"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
 
 <script>
