--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -172,6 +172,17 @@ textarea {
     padding: 0 3.5% 0 4.5%;
 }
 
+.my-footer {
+    background-color: #424242;
+    color: #9e9e9e;
+    height: 100%;
+    text-align: center;
+    .footer-text {
+        padding-top: 30px;
+        font-size: 30px;
+    }
+}
+
 @media only screen and (max-device-width: 500px) {
     .scrollLink {
         font-size: 30px;
@@ -185,13 +196,4 @@ textarea {
     .showSingle {
         font-size: 23px;
     }
-
-    // .edit {
-    //     font-size: 23px;
-    //     line-height: 1.2;
-    // }
-
-    // .mobile-only {
-    //     display: block;
-    // }
 }
