--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -185,7 +185,7 @@ textarea {
 
 @media only screen and (max-device-width: 500px) {
     .scrollLink {
-        font-size: 30px;
+        font-size: 27px;
     }
 
     #top-btn {
@@ -193,7 +193,20 @@ textarea {
         padding: 8px 25px;
     }
 
-    .showSingle {
+    // .showSingle {
+    //     font-size: 23px;
+    // }
+
+    .plain-text {
         font-size: 23px;
+        line-height: 1.2;
+        ul {
+            font-size: 23px;
+            line-height: 1.2;
+        }
+    }
+
+    .mobile-only {
+        display: block;
     }
 }
